Finished bootrstrap, minus collapsing menu button.

--- a/index.html
+++ b/index.html
@@ -1,69 +1,95 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
-  <head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About | Mateo Vargas</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
 
-    <meta charset="UTF-8">
-    <title>Mateo Vargas</title>
-    <link rel="stylesheet" href="assets/css/reset.css"></link>
-    <link rel="stylesheet" href="assets/css/style.css"></link>
-
-  </head>
-
+<body>
   <header>
-    <!-- HTML for Header Menu -->
-  	<div class="navbar">
-      <h1>Mateo Vargas</h1>
-      <a href="portfolio.html" target="_blank">Portfolio</a>
-      <a href="contact.html" target="_blank">Contact</a>
-      <a href="index.html" target="_blank">About</a>
-    </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+          <div class="navbar-header">
+            <a href="index.html" id="logo">Mateo Vargas</a>
+          </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </div>
+    </nav>
   </header>
 
-  <body>
-    <div class="container">
-      <!-- HTML for Bio container -->
-    	<div class="bioContainer">
-  		  <h1>About Me</h1>
-        <br>
-        <img src="assets/images/me.jpg" alt="Mateo Vargas"></img>
-  		  <p>
-  			 Mateo Vargas is a software developer in San Diego, California.
-  			 He obtained his Bachelor's of Science in Cognitive Science with
-  			 an emphasis in Neuroscience from the University of California,
-  			 San Diego and later completed his Master's of Science in Computer
-  			 Science at the University of Edinburgh in Scotland. He has worked
-  			 in game programming and web development.
-  		  </p>
-  		  <p>
-  			 An avid gamer, Mateo spends much of his time outside of work playing
-  			 and writing about a myriad of games. Additionally, he has a passion
-  			 for photography and travel, which he pursues when he can and has had his
-  			 work posted on 
-  			 <a 
-  			 href="https://kotaku.com/holyrood-abbey-edinburgh-scotland-by-mateo-vargas-j-1800671707"
-  			 target="_blank">
-  				  Kotaku.com
-  			 </a>
-  		  </p>
-  	 </div>
-     <!-- HTML for Social sidebar -->
-  	 <div class="socialContainer">
-		    <h1>Connect with Me</h1>
-		    <ul>
-  			 <li><a href="https://github.com/mateovargas" target="_blank">
-  				  <img src="assets/images/github.png" alt="Github"></img>
-  			 </a></li>
-  			 <li><a href="https://www.linkedin.com/in/mateo-vargas-03896189/" target="_blank">
-  				  <img src="assets/images/linkedin.png" alt="LinkedIn"></img>
-  			 </a></li>
-  			 <li><a href="https://stackoverflow.com/users/8803156/matvargas" target="_blank">
-  				  <img src="assets/images/stackoverflow.png" alt="Stack Overflow"></img>
-  			 </a></li>
-  		  </ul>
-  	 </div>
+
+
+  <div id="main-container" class="container">
+    <div class="col-xs-8 col-md-8">
+      <section class="main-section">
+        <div class="row">
+          <h1>About Me</h1>
+        </div>
+        <div class="row">
+          <img src="assets/images/me.jpg" class="auth-image" alt="Mateo Vargas">
+
+          <p>
+            Mateo Vargas is a software developer in San Diego, California.
+            He obtained his Bachelor's of Science in Cognitive Science with
+            an emphasis in Neuroscience from the University of California,
+            San Diego and later completed his Master's of Science in Computer
+            Science at the University of Edinburgh in Scotland. He has worked
+            in game programming and web development.
+          </p>
+
+          <p>
+            An avid gamer, Mateo spends much of his time outside of work playing
+            and writing about a myriad of games. His written work can be at
+            <a href="http://playwrite.com.au/dark-souls-and-life-lessons-from-lordran-and-beyond/" target="_blank">
+              playwrite.au. 
+            </a>
+            Additionally, he has a passion for photography and travel, which he 
+            pursues when he can and has had his work posted on 
+            <a 
+              href="https://kotaku.com/holyrood-abbey-edinburgh-scotland-by-mateo-vargas-j-1800671707"
+              target="_blank">
+              Kotaku.com
+            </a>
+          </p>
+        </div>
+      </section>
     </div>
-  </body>
-  <br>
-  <footer><p>Copyright 2017 Mateo Vargas</p></footer>
+    <div class="col-xs-4 col-md-4">
+      <section class="sidebar">
+        <div id="connect">
+          <div class="row">
+            <h2>Connect with Me</h2>
+          </div>
+          <div class="row">
+            <a href="https://github.com/mateovargas" target="_blank">
+              <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+            </a>
+            <a href="https://www.linkedin.com/in/mateo-vargas-03896189/" target="_blank">
+              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+            </a>
+            <a href="https://stackoverflow.com/users/8803156/matvargas" target="_blank">
+              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Your Name
+    </div>
+  </footer>
+</body>
+
 </html>
