--- a/contact.html
+++ b/contact.html
@@ -1,66 +1,90 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
-  <head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contact | Mateo Vargas</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
 
-    <meta charset="UTF-8">
-    <title>Mateo Vargas</title>
-    <link rel="stylesheet" href="assets/css/reset.css"></link>
-    <link rel="stylesheet" href="assets/css/style.css"></link>
+<body>
 
-  </head>
   <header>
-    <!-- HTML for Header Menu -->
-    <div class="navbar">
-      <h1>Mateo Vargas</h1>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="contact.html">Contact</a>
-      <a href="index.html" target="_blank">About</a>
-    </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+          <div class="navbar-header">
+            <a href="index.html" id="logo">Mateo Vargas</a>
+          </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="index.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </div>
+    </nav>
   </header>
-  <body>
-    <div class="container">
-      <div class="bioContainer">
-        <h1>Contact</h1>
-        <br>
-        <form action="#">
 
-          <label for="fname">Full Name: </label><br>
-          <input type="text" id="fname" name="firstname" placeholder="John Smith">
-          <br>
 
-          <label for="lname">Email: </label><br>
-          <input type="text" id="lname" name="lastname" placeholder="example@gmail.com">
-          <br>
 
-          <label for="subject">Message</label><br>
-          <textarea id="subject" name="subject" placeholder="" style="height:150px"></textarea>
-          <br>
-
-          <input class="button" type="submit" value="Submit">
-          <br>
-        </form>
-      </div>
-    
-
-      <!-- HTML for Social sidebar -->
-      <div class="socialContainer">
-        <h1>Connect with Me</h1>
-        <ul>
-         <li><a href="https://github.com/mateovargas" target="_blank">
-            <img src="assets/images/github.png" alt="Github"></img>
-         </a></li>
-         <li><a href="https://www.linkedin.com/in/mateo-vargas-03896189/" target="_blank">
-            <img src="assets/images/linkedin.png" alt="LinkedIn"></img>
-         </a></li>
-         <li><a href="https://stackoverflow.com/users/8803156/matvargas" target="_blank">
-            <img src="assets/images/stackoverflow.png" alt="Stack Overflow"></img>
-         </a></li>
-        </ul>
-      </div>
-
+  <div id="main-container" class="container">
+    <div class="col-xs-8 col-md-8">
+      <section class="main-section">
+        <div class="row">
+          <h1>Contact</h1>
+        </div>
+        <div class="row">
+          <!--Form goes here-->
+          <form id="contact-form">
+            <ul>
+              <li>
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="Full Name" required="required">
+              </li>
+              <li>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+              </li>
+              <li>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required="required"></textarea>
+              </li>
+            </ul>
+            <input type="submit" value="Send">
+          </form>
+        </div>
+      </section>
     </div>
-  </body>
+    <div class="col-xs-4 col-md-4">
+      <section class="sidebar">
+        <div id="connect">
+          <div class="row">
+            <h2>Connect with Me</h2>
+          </div>
+          <div class="row">
+            <a href="https://github.com/mateovargas" target="_blank">
+              <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+            </a>
+            <a href="https://www.linkedin.com/in/mateo-vargas-03896189/" target="_blank">
+              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+            </a>
+            <a href="https://stackoverflow.com/users/8803156/matvargas" target="_blank">
+              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
 
-  <footer><p>Copyright 2017 Mateo Vargas</p></footer>
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Your Name
+    </div>
+  </footer>
+
+</body>
+
 </html>
