--- a/portfolio.html
+++ b/portfolio.html
@@ -1,72 +1,108 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
-  <head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio | Mateo Vargas</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
 
-    <meta charset="UTF-8">
-    <title>Mateo Vargas</title>
-    <link rel="stylesheet" href="assets/css/reset.css"></link>
-    <link rel="stylesheet" href="assets/css/style.css"></link>
-
-  </head>
+<body>
   <header>
-    <!-- HTML for Header Menu -->
-    <div class="navbar">
-      <h1>Mateo Vargas</h1>
-      <a href="portfolio.html">Portfolio</a>
-      <a href="contact.html">Contact</a>
-      <a href="index.html" target="_blank">About</a>
-    </div>
-  </header>
-  <body>
-    <div class="container">
-    <!-- HTML for Porfolio container -->
-        <div class="bioContainer">
-          <h1>Portfolio</h1>
-
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
-
-            <h3>Hangman</h3>
+  <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+          <div class="navbar-header">
+            <a href="index.html" id="logo">Mateo Vargas</a>
           </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-            <h3>RPG Game</h3>
+          <div class="navbar-collapse collapse" id="navbar">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="index.html">About</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
           </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-            <h3>Trivia Game</h3>
-          </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-            <h3>Rutgers Info Widget</h3>
-          </div>
-          <div class="work">
-            <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-            <h3>Rock Paper Scissors</h3>
-          </div>
-        </div>
-
-        <!-- HTML for Social sidebar -->
-        <div class="socialContainer">
-          <h1>Connect with Me</h1>
-          <ul>
-            <li><a href="https://github.com/mateovargas" target="_blank">
-              <img src="assets/images/github.png" alt="Github"></img>
-            </a></li>
-            <li><a href="https://www.linkedin.com/in/mateo-vargas-03896189/" target="_blank">
-              <img src="assets/images/linkedin.png" alt="LinkedIn"></img>
-            </a></li>
-            <li><a href="https://stackoverflow.com/users/8803156/matvargas" target="_blank">
-              <img src="assets/images/stackoverflow.png" alt="Stack Overflow"></img>
-            </a></li>
-          </ul>
-        </div>
       </div>
-    </body>
-  <footer><p>Copyright 2017 Mateo Vargas</p></footer>
+    </nav>
+  </header>
+
+
+
+  <div id="main-container" class="container">
+    <div class="col-xs-8 col-md-8">
+      <section class="main-section">
+        <div class="row">
+          <h1>Portfolio</h1>
+        </div>
+        <div class="row">
+          <!--Form goes here-->
+          <div class="col-xs-12 col-md-6">
+            <div class="work">
+              <a href="discreteSIR.html" target="_blank">
+                <img src="assets/images/game.png" alt="Dissertation">
+              </a>
+              <h3>Xenoplague</h3>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="work">
+              <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+              <h3>RPG Game</h3>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="work">
+              <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+              <h3>Trivia Game</h3>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="work">
+              <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+              <h3>Rutgers Info Widget</h3>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <div class="work">
+              <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+              <h3>Rock Paper Scissors</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+    </div>
+    <div class="col-xs-4 col-md-4">
+      <section class="sidebar">
+        <div id="connect">
+          <div class="row">
+            <h2>Connect with Me</h2>
+          </div>
+          <div class="row">
+            <a href="https://github.com/mateovargas" target="_blank">
+              <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+            </a>
+            <a href="https://www.linkedin.com/in/mateo-vargas-03896189/" target="_blank">
+              <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+            </a>
+            <a href="https://stackoverflow.com/users/8803156/matvargas" target="_blank">
+              <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+            </a>
+          </div>
+        </div>
+      </section>
+    </div>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2016 Your Name
+    </div>
+  </footer>
+</body>
+
 </html>
